--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id = "block"></div>
 
 	</div>
-	<script src="script.js"></script>s
+	<script src="script.js"></script>
 
 </body>
 </html>
