--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 # game2
 <!DOCTYPE html>
 <html lang="en" onclick="jump()">
@@ -6,7 +7,7 @@
 </head>
 <body>
 	<div id = "game">
-		<div id = "charicter"></div>
+		<div id = "character"></div>
 		<div id = "block"></div>
 
 	</div>
